src/include/PGM.c.h

typedef char JStrStrMap;    // map<pcKey, pcValue>
typedef char JStrSet;       // set<pcStr>
typedef char JRelation;     // [iType, pcTagName, pcTag, JStrStrMap]
typedef char JRelationsMap; // map<pcUid, JRelation>
typedef char JMsgContent;   // [pcType, pcBody, map<pcKey, pcStream>, map<pcKey, pcValue>]
typedef int(*PGM_C_EVENT_PROCESSOR)(PGM_EVENT event, const JStrStrMap* pcParams);
/*
  1. 调用方式:
    a. 好友申请: A pgm_apply_relation(cookie, uidB, selfUid, Friend, 'A wanna be B friend', syncRelation, notifyParams, err)
      @syncRelation为获同意后, A 个人列表uidB的同步added节点. 若申请前uidB已在A个人列表中, syncRelation填Relation(NoneSyncType,"","",nullCfgs)
    b. 组织邀请: A pgm_apply_relation(cookie, uidB, orgIdC, Organize, 'A invite B as C member', syncRelation, notifyParams, err)
      @syncRelation为获同意后, 组织列表C中 uidB的同步added节点
    c. 组织申请: A pgm_apply_relation(cookie, orgIdC, uidAOrB, Member, 'A apply AOrB as C member', syncRelation, notifyParams, err)
      @syncRelation为获同意后, AOrB 个人列表 orgIdC的同步added节点
  2. 调用成功后,所有相关方都将回调P2PApply/OrgApply/OrgInvite event
*/
bool pgm_c_apply_relation(const char* pcCookie, const char* pcGroupId, const char* pcTargetId, int iTargetType, const char* pcDesc, const JRelation* pcSyncRelation, const JStrStrMap* pcInParams, char* pcErr);
/*
  1. 调用方式:
    a. 好友申请: B pgm_accept_relation(cookie, msgIdx, tagNameA, tagA, nullCfgs, notifyParams, err). 若只想使用A的昵称作为备注名,昵称可通过apply的@desc传入, 下同
    b. 组织邀请: B pgm_accept_relation(cookie, msgIdx, tagNameC, tagC, nullCfgs, notifyParams, err)
    c. 组织申请: C Owner/任一Manager pgm_accept_relation(cookie, msgIdx, tagNameAOrB, tagAOrB, nullCfgs, notifyParams, err)
  2. 调用成功后,所有相关方都将回调P2PApplyResponse/OrgApplyResponse/OrgInviteResponse event
*/
bool pgm_c_accept_relation(const char* pcCookie, int64_t lMsgIdx, const char* pcTargetTagName, const char* pcTargetTag, const JStrStrMap* pcTargetCfgs, const JStrStrMap* pcInParams, char* pcErr);
/*
  @relations为初始成员, 必须包含自己作为Owner
  @orgProps群属性
*/
bool pgm_c_create_org(const char* pcCookie, const JRelationsMap* pcRelations, const JStrStrMap* pcOrgProps, char* pcErr);
bool pgm_c_disband_org(const char* pcCookie, const char* pcOrgId, char* pcErr);
/*
  1. 设置对方看到的自己的状态. 比如 A设置 正在编辑 之于B: A pgm_set_status_to_peer(cookie, uidB, 'Editing', '1', err)
  2. @timeStamp为状态版本, 在并发乱序情况下, 状态写只会由低版本更新为高版本
    需要在多个同时登录设备之间维护版本才需要填. 否则一般填-1, 此时pgm库默认使用粗校后的本地时间作为状态版本. pgm_set_org_status同
*/
bool pgm_c_set_status_to_peer(const char* pcCookie, const char* pcPeerUid, const char* pcType, const char* pcValue, int64_t lTimeStamp, char* pcErr);
/*
  1. 设置组织中某节点(可能是自己也可能是他人)的状态. 比如 A设置自己在组织C中的状态为繁忙: A pgm_nowait_ack_set_status(cookie, orgIdC, uidA, 'Busy', '1', err)
  2. 设置self列表中他人的状态, 供其他设备登录时读取. A pgm_nowait_ack_set_status(cookie, uidA, uidB, '...', '1', err), 暂无明确的应用场景
*/
bool pgm_c_nowait_ack_set_status(const char* pcGroupId, const char* pcTargetId, const char* pcType, const char* pcValue, int64_t lTimeStamp, char* pcErr);
/*
1. 设置自己/组织属性(会有组织权限检查), @props传diff
2. 设置成功后将回调PGM_UPDATE_RPOPS
*/
bool pgm_c_nowait_ack_set_props(const char* pcGroupId, const JStrStrMap* pcDiffProps, char* pcErr);
/*
  1. 读取任何人/任何组织的属性, 包括但不限于自己的好友/加入的组织
  2. @prefixs 传希望获取的属性key前缀的集合. 若要获取所有属性, prefixs = [""]即可(空串是所有key的前缀)
  3. 查到的结果将回调PGM_UPDATE_RPOPS
  4. @prefixs若包含'SessionsStatus', 结果集中将包含rslt['SessionsStatus'] = '{sid0:int_status0,sid1:int_status1}'
      0 表示online
      2 表示offline(未注册push模版)
    其他正整数表示offlinePush,正整数的值是offlinePush的毫秒时间戳
*/
bool pgm_c_get_props(const char* pcCookie, const char* pcGroupId, const JStrSet* pcPrefixs, char* pcErr);
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

bool pgm_c_send_p2p_msg(const char* pcCookie, const char* pcPeerUid, const JMsgContent* pcContent, const JStrStrMap* pcInParams, char* pcErr);
/*
  1. 在群消息中, MsgContent::_params[Message::K_MSG_REMIND] = "9999_1;9999_2" 表示需要无视这些人在群列表中Relation::cfgs[Group::K_CFG_IM_PUSH]的配置, 发push
    使用它来实现@功能
*/
bool pgm_send_org_msg(const char* pcCookie, const char* pcOrgId, const JMsgContent* pcContent, const JStrStrMap* pcInParams, char* pcErr);