lib/flutter_pgm_bindings_generated.dart


  /// 1. 调用方式:
  /// a. 好友申请: A pgm_apply_relation(cookie, uidB, selfUid, Friend, 'A wanna be B friend', syncRelation, notifyParams, err)
  /// @syncRelation为获同意后, A 个人列表uidB的同步added节点. 若申请前uidB已在A个人列表中, syncRelation填Relation(NoneSyncType,"","",nullCfgs)
  /// b. 组织邀请: A pgm_apply_relation(cookie, uidB, orgIdC, Organize, 'A invite B as C member', syncRelation, notifyParams, err)
  /// @syncRelation为获同意后, 组织列表C中 uidB的同步added节点
  /// c. 组织申请: A pgm_apply_relation(cookie, orgIdC, uidAOrB, Member, 'A apply AOrB as C member', syncRelation, notifyParams, err)
  /// @syncRelation为获同意后, AOrB 个人列表 orgIdC的同步added节点
  /// 2. 调用成功后,所有相关方都将回调P2PApply/OrgApply/OrgInvite event
  int pgm_c_apply_relation(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<ffi.Char> pcTargetId,
    int iTargetType,
    ffi.Pointer<ffi.Char> pcDesc,
    ffi.Pointer<JRelation> pcSyncRelation,
    ffi.Pointer<JStrStrMap> pcInParams,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_apply_relation(
      pcCookie,
      pcGroupId,
      pcTargetId,
      iTargetType,
      pcDesc,
      pcSyncRelation,
      pcInParams,
      pcErr,
    );
  }

  late final _pgm_c_apply_relationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelation>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_apply_relation');
  late final _pgm_c_apply_relation = _pgm_c_apply_relationPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<JRelation>,
          ffi.Pointer<JStrStrMap>,
          ffi.Pointer<ffi.Char>)>();

  /// 1. 调用方式:
  /// a. 好友申请: B pgm_accept_relation(cookie, msgIdx, tagNameA, tagA, nullCfgs, notifyParams, err). 若只想使用A的昵称作为备注名,昵称可通过apply的@desc传入, 下同
  /// b. 组织邀请: B pgm_accept_relation(cookie, msgIdx, tagNameC, tagC, nullCfgs, notifyParams, err)
  /// c. 组织申请: C Owner/任一Manager pgm_accept_relation(cookie, msgIdx, tagNameAOrB, tagAOrB, nullCfgs, notifyParams, err)
  /// 2. 调用成功后,所有相关方都将回调P2PApplyResponse/OrgApplyResponse/OrgInviteResponse event
  int pgm_c_accept_relation(
    ffi.Pointer<ffi.Char> pcCookie,
    int lMsgIdx,
    ffi.Pointer<ffi.Char> pcTargetTagName,
    ffi.Pointer<ffi.Char> pcTargetTag,
    ffi.Pointer<JStrStrMap> pcTargetCfgs,
    ffi.Pointer<JStrStrMap> pcInParams,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_accept_relation(
      pcCookie,
      lMsgIdx,
      pcTargetTagName,
      pcTargetTag,
      pcTargetCfgs,
      pcInParams,
      pcErr,
    );
  }

  late final _pgm_c_accept_relationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_accept_relation');
  late final _pgm_c_accept_relation = _pgm_c_accept_relationPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<JStrStrMap>,
          ffi.Pointer<JStrStrMap>,
          ffi.Pointer<ffi.Char>)>();

  /// @relations为初始成员, 必须包含自己作为Owner
  /// @orgProps群属性
  int pgm_c_create_org(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<JRelationsMap> pcRelations,
    ffi.Pointer<JStrStrMap> pcOrgProps,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_create_org(
      pcCookie,
      pcRelations,
      pcOrgProps,
      pcErr,
    );
  }

  late final _pgm_c_create_orgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelationsMap>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_create_org');
  late final _pgm_c_create_org = _pgm_c_create_orgPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<JRelationsMap>,
          ffi.Pointer<JStrStrMap>, ffi.Pointer<ffi.Char>)>();

  int pgm_c_disband_org(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcOrgId,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_disband_org(
      pcCookie,
      pcOrgId,
      pcErr,
    );
  }

  late final _pgm_c_disband_orgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_disband_org');
  late final _pgm_c_disband_org = _pgm_c_disband_orgPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// 1. 设置对方看到的自己的状态. 比如 A设置 正在编辑 之于B: A pgm_set_status_to_peer(cookie, uidB, 'Editing', '1', err)
  /// 2. @timeStamp为状态版本, 在并发乱序情况下, 状态写只会由低版本更新为高版本
  /// 需要在多个同时登录设备之间维护版本才需要填. 否则一般填-1, 此时pgm库默认使用粗校后的本地时间作为状态版本. pgm_set_org_status同
  int pgm_c_set_status_to_peer(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcPeerUid,
    ffi.Pointer<ffi.Char> pcType,
    ffi.Pointer<ffi.Char> pcValue,
    int lTimeStamp,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_set_status_to_peer(
      pcCookie,
      pcPeerUid,
      pcType,
      pcValue,
      lTimeStamp,
      pcErr,
    );
  }

  late final _pgm_c_set_status_to_peerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('pgm_c_set_status_to_peer');
  late final _pgm_c_set_status_to_peer =
      _pgm_c_set_status_to_peerPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>)>();

  /// 1. 设置组织中某节点(可能是自己也可能是他人)的状态. 比如 A设置自己在组织C中的状态为繁忙: A pgm_nowait_ack_set_status(cookie, orgIdC, uidA, 'Busy', '1', err)
  /// 2. 设置self列表中他人的状态, 供其他设备登录时读取. A pgm_nowait_ack_set_status(cookie, uidA, uidB, '...', '1', err), 暂无明确的应用场景
  int pgm_c_nowait_ack_set_status(
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<ffi.Char> pcTargetId,
    ffi.Pointer<ffi.Char> pcType,
    ffi.Pointer<ffi.Char> pcValue,
    int lTimeStamp,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_nowait_ack_set_status(
      pcGroupId,
      pcTargetId,
      pcType,
      pcValue,
      lTimeStamp,
      pcErr,
    );
  }

  late final _pgm_c_nowait_ack_set_statusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('pgm_c_nowait_ack_set_status');
  late final _pgm_c_nowait_ack_set_status =
      _pgm_c_nowait_ack_set_statusPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>)>();

  /// 1. 设置自己/组织属性(会有组织权限检查), @props传diff
  /// 2. 设置成功后将回调PGM_UPDATE_RPOPS
  int pgm_c_nowait_ack_set_props(
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<JStrStrMap> pcDiffProps,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_nowait_ack_set_props(
      pcGroupId,
      pcDiffProps,
      pcErr,
    );
  }

  late final _pgm_c_nowait_ack_set_propsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_nowait_ack_set_props');
  late final _pgm_c_nowait_ack_set_props =
      _pgm_c_nowait_ack_set_propsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>();

  /// 1. 读取任何人/任何组织的属性, 包括但不限于自己的好友/加入的组织
  /// 2. @prefixs 传希望获取的属性key前缀的集合. 若要获取所有属性, prefixs = [""]即可(空串是所有key的前缀)
  /// 3. 查到的结果将回调PGM_UPDATE_RPOPS
  /// 4. @prefixs若包含'SessionsStatus', 结果集中将包含rslt['SessionsStatus'] = '{sid0:int_status0,sid1:int_status1}'
  /// 0 表示online
  /// 2 表示offline(未注册push模版)
  /// 其他正整数表示offlinePush,正整数的值是offlinePush的毫秒时间戳
  int pgm_c_get_props(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<JStrSet> pcPrefixs,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_get_props(
      pcCookie,
      pcGroupId,
      pcPrefixs,
      pcErr,
    );
  }

  late final _pgm_c_get_propsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<JStrSet>, ffi.Pointer<ffi.Char>)>>('pgm_c_get_props');
  late final _pgm_c_get_props = _pgm_c_get_propsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<JStrSet>, ffi.Pointer<ffi.Char>)>();

  /// /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
  int pgm_c_send_p2p_msg(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcPeerUid,
    ffi.Pointer<JMsgContent> pcContent,
    ffi.Pointer<JStrStrMap> pcInParams,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_send_p2p_msg(
      pcCookie,
      pcPeerUid,
      pcContent,
      pcInParams,
      pcErr,
    );
  }

  late final _pgm_c_send_p2p_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JMsgContent>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_send_p2p_msg');
  late final _pgm_c_send_p2p_msg = _pgm_c_send_p2p_msgPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<JMsgContent>,
          ffi.Pointer<JStrStrMap>,
          ffi.Pointer<ffi.Char>)>();

  /// 1. 在群消息中, MsgContent::_params[Message::K_MSG_REMIND] = "9999_1;9999_2" 表示需要无视这些人在群列表中Relation::cfgs[Group::K_CFG_IM_PUSH]的配置, 发push
  /// 使用它来实现@功能
  int pgm_send_org_msg(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcOrgId,
    ffi.Pointer<JMsgContent> pcContent,
    ffi.Pointer<JStrStrMap> pcInParams,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_send_org_msg(
      pcCookie,
      pcOrgId,
      pcContent,
      pcInParams,
      pcErr,
    );
  }

  late final _pgm_send_org_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JMsgContent>,
              ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_send_org_msg');
  late final _pgm_send_org_msg = _pgm_send_org_msgPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<JMsgContent>,
          ffi.Pointer<JStrStrMap>,
          ffi.Pointer<ffi.Char>)>();
}

typedef PGM_C_EVENT_PROCESSOR = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Int Function(ffi.Int32 event, ffi.Pointer<JStrStrMap> pcParams)>>;

abstract class PGM_EVENT {
  static const int InvalidEvent = 0;

  /// 1. params.size()必为1, key为cookie,value为空表示成功, 为其他值表示失败reason
  /// 2. 唯一的特例是pgm_check_relation. value为String(Group::RelationType), 比如13表示Contact,15表示Strange. 其他非整数值表示失败reason
  static const int CookieEnd = 1;
